# ncmpcpp

./: .gitignore  AUTHORS  CHANGELOG.md  COPYING  INSTALL  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  configure.in
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
data/: Makefile.am  encodings
doc/: Makefile.am  bindings  config  keys  ncmpcpp-completion.bash  ncmpcpp.1  ncmpcpp_keys  ncmpcpprc
examples/: .ncmpcpprc  ncmpcpp_keys  ncmpcpprc
extras/: Makefile  artist_to_albumartist.cpp
m4/: boost.m4
src/: .actions.cpp.swp  .bindings.cpp.swp  .sort_playlist.cpp.swp  Makefile.am  actions.cpp  actions.h  bindings.cpp  bindings.h  browser.cpp  browser.h  charset.cpp  charset.h  clock.cpp  clock.h  cmdargs.cpp  cmdargs.h  color_parser.cpp  configuration.cpp  configuration.h  conv.cpp  conv.h  curl_handle.cpp  curl_handle.h  display.cpp  display.h  enums.cpp  enums.h  error.cpp  error.h  exec_item.h  format.cpp  format.h  format_impl.h  gcc.h  global.cpp  global.h  help.cpp  help.h  helpers.cpp  helpers.h  (+93 more)
src/curses/: formatted_color.cpp  formatted_color.h  menu.h  menu_impl.h  scrollpad.cpp  scrollpad.h  strbuffer.h  window.cpp  window.h
src/helpers/: song_iterator_maker.h
src/screens/: artwork.cpp  artwork.h  browser.cpp  browser.h  clock.cpp  clock.h  help.cpp  help.h  lastfm.cpp  lastfm.h  lyrics.cpp  lyrics.h  media_library.cpp  media_library.h  outputs.cpp  outputs.h  playlist.cpp  playlist.h  playlist_editor.cpp  playlist_editor.h  screen.cpp  screen.h  screen_switcher.h  screen_type.cpp  screen_type.h  search_engine.cpp  search_engine.h  sel_items_adder.cpp  sel_items_adder.h  server_info.cpp  server_info.h  song_info.cpp  song_info.h  sort_playlist.cpp  sort_playlist.h  tag_editor.cpp  tag_editor.h  tiny_tag_editor.cpp  tiny_tag_editor.h  visualizer.cpp  (+1 more)
src/utility/: comparators.cpp  comparators.h  const.h  conversion.h  functional.h  html.cpp  html.h  numeric_conversions.h  option_parser.cpp  option_parser.h  readline.h  sample_buffer.cpp  sample_buffer.h  scoped_value.h  shared_resource.h  storage_kind.h  string.cpp  string.h  type_conversions.cpp  type_conversions.h  wide_string.cpp  wide_string.h
