bin_PROGRAMS = ncmpcpp
ncmpcpp_SOURCES = \
	utility/comparators.cpp \
	utility/html.cpp \
	utility/string.cpp \
	utility/type_conversions.cpp \
	actions.cpp \
	browser.cpp \
	charset.cpp \
	clock.cpp \
	curl_handle.cpp \
	display.cpp \
	error.cpp \
	global.cpp \
	help.cpp \
	helpers.cpp \
	lastfm.cpp \
	lastfm_service.cpp \
	lyrics.cpp \
	lyrics_fetcher.cpp \
	media_library.cpp \
	menu.cpp \
	mpdpp.cpp \
	mutable_song.cpp \
	ncmpcpp.cpp \
	outputs.cpp \
	playlist.cpp \
	playlist_editor.cpp \
	regexes.cpp \
	screen.cpp \
	scrollpad.cpp \
	search_engine.cpp \
	sel_items_adder.cpp \
	server_info.cpp \
	settings.cpp \
	song.cpp \
	song_info.cpp \
	status.cpp \
	tag_editor.cpp \
	tiny_tag_editor.cpp \
	visualizer.cpp \
	window.cpp

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
ncmpcpp_LDFLAGS = $(all_libraries)
noinst_HEADERS = \
	utility/comparators.h \
	utility/html.h \
	utility/string.h \
	utility/numeric_conversions.h \
	utility/type_conversions.h \
	browser.h \
	charset.h \
	clock.h \
	curl_handle.h \
	display.h \
	error.h \
	global.h \
	help.h \
	helpers.h \
	interfaces.h \
	lastfm.h \
	lastfm_service.h \
	lyrics.h \
	lyrics_fetcher.h \
	macro_utilities.h \
	media_library.h \
	menu.h \
	mpdpp.h \
	mutable_song.h \
	outputs.h \
	playlist_editor.h \
	regex_filter.h \
	regexes.h \
	screen.h \
	scrollpad.h \
	search_engine.h \
	sel_items_adder.h \
	server_info.h \
	settings.h \
	song.h \
	song_info.h \
	tag_editor.h \
	tiny_tag_editor.h \
	visualizer.h \
	window.h
