bin_PROGRAMS = ncmpcpp
ncmpcpp_SOURCES = \
	utility/comparators.cpp \
	utility/html.cpp \
	utility/option_parser.cpp \
	utility/string.cpp \
	utility/type_conversions.cpp \
	utility/wide_string.cpp \
	actions.cpp \
	bindings.cpp \
	browser.cpp \
	charset.cpp \
	clock.cpp \
	configuration.cpp \
	curl_handle.cpp \
	display.cpp \
	enums.cpp \
	error.cpp \
	global.cpp \
	help.cpp \
	helpers.cpp \
	lastfm.cpp \
	lastfm_service.cpp \
	lyrics.cpp \
	lyrics_fetcher.cpp \
	macro_utilities.cpp \
	media_library.cpp \
	mpdpp.cpp \
	mutable_song.cpp \
	ncmpcpp.cpp \
	outputs.cpp \
	playlist.cpp \
	playlist_editor.cpp \
	screen.cpp \
	screen_type.cpp \
	scrollpad.cpp \
	search_engine.cpp \
	sel_items_adder.cpp \
	server_info.cpp \
	settings.cpp \
	song.cpp \
	song_info.cpp \
	sort_playlist.cpp \
	status.cpp \
	statusbar.cpp \
	tag_editor.cpp \
	tags.cpp \
	tiny_tag_editor.cpp \
	title.cpp \
	visualizer.cpp \
	window.cpp

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
ncmpcpp_LDFLAGS = $(all_libraries)
noinst_HEADERS = \
	utility/comparators.h \
	utility/conversion.h \
	utility/functional.h \
	utility/html.h \
	utility/option_parser.h \
	utility/string.h \
	utility/type_conversions.h \
	utility/wide_string.h \
	bindings.h \
	browser.h \
	charset.h \
	clock.h \
	configuration.h \
	curl_handle.h \
	display.h \
	enums.h \
	error.h \
	global.h \
	help.h \
	helpers.h \
	interfaces.h \
	lastfm.h \
	lastfm_service.h \
	lyrics.h \
	lyrics_fetcher.h \
	macro_utilities.h \
	media_library.h \
	menu.h \
	mpdpp.h \
	mutable_song.h \
	outputs.h \
	playlist_editor.h \
	proxy_song_list.h \
	regex_filter.h \
	runnable_item.h \
	screen.h \
	screen_switcher.h \
	screen_type.h \
	scrollpad.h \
	search_engine.h \
	sel_items_adder.h \
	server_info.h \
	settings.h \
	song.h \
	song_info.h \
	sort_playlist.h \
	status.h \
	statusbar.h \
	tag_editor.h \
	tags.h \
	tiny_tag_editor.h \
	title.h \
	visualizer.h \
	window.h
