bin_PROGRAMS = ncmpcpp
ncmpcpp_SOURCES = \
	curses/formatted_color.cpp \
	curses/scrollpad.cpp \
	curses/window.cpp \
	screens/browser.cpp \
	screens/clock.cpp \
	screens/help.cpp \
	screens/lastfm.cpp \
	screens/lyrics.cpp \
	screens/media_library.cpp \
	screens/outputs.cpp \
	screens/playlist.cpp \
	screens/playlist_editor.cpp \
	screens/screen.cpp \
	screens/screen_type.cpp \
	screens/search_engine.cpp \
	screens/sel_items_adder.cpp \
	screens/server_info.cpp \
	screens/song_info.cpp \
	screens/sort_playlist.cpp \
	screens/tag_editor.cpp \
	screens/tiny_tag_editor.cpp \
	screens/visualizer.cpp \
	utility/comparators.cpp \
	utility/html.cpp \
	utility/option_parser.cpp \
	utility/string.cpp \
	utility/type_conversions.cpp \
	utility/wide_string.cpp \
	actions.cpp \
	bindings.cpp \
	charset.cpp \
	configuration.cpp \
	curl_handle.cpp \
	display.cpp \
	enums.cpp \
	format.cpp \
	global.cpp \
	helpers.cpp \
	lastfm_service.cpp \
	lyrics_fetcher.cpp \
	macro_utilities.cpp \
	mpdpp.cpp \
	mutable_song.cpp \
	ncmpcpp.cpp \
	settings.cpp \
	song.cpp \
	song_list.cpp \
	status.cpp \
	statusbar.cpp \
	tags.cpp \
	title.cpp

# set the include path found by configure
AM_CPPFLAGS= $(all_includes)

# the library search path.
ncmpcpp_LDFLAGS = $(all_libraries)
noinst_HEADERS = \
	curses/formatted_color.h \
	curses/menu.h \
	curses/menu_impl.h \
	curses/scrollpad.h \
	curses/strbuffer.h \
	curses/window.h \
	screens/browser.h \
	screens/clock.h \
	screens/help.h \
	screens/lastfm.h \
	screens/lyrics.h \
	screens/media_library.h \
	screens/outputs.h \
	screens/playlist_editor.h \
	screens/screen.h \
	screens/screen_switcher.h \
	screens/screen_type.h \
	screens/search_engine.h \
	screens/sel_items_adder.h \
	screens/server_info.h \
	screens/song_info.h \
	screens/sort_playlist.h \
	screens/tag_editor.h \
	screens/tiny_tag_editor.h \
	screens/visualizer.h \
	utility/comparators.h \
	utility/const.h \
	utility/conversion.h \
	utility/functional.h \
	utility/html.h \
	utility/option_parser.h \
	utility/readline.h \
	utility/scoped_value.h \
	utility/storage_kind.h \
	utility/shared_resource.h \
	utility/string.h \
	utility/type_conversions.h \
	utility/wide_string.h \
	bindings.h \
	charset.h \
	configuration.h \
	curl_handle.h \
	display.h \
	enums.h \
	format.h \
	format_impl.h \
	global.h \
	helpers.h \
	helpers/song_iterator_maker.h \
	interfaces.h \
	lastfm_service.h \
	lyrics_fetcher.h \
	macro_utilities.h \
	mpdpp.h \
	mutable_song.h \
	regex_filter.h \
	runnable_item.h \
	settings.h \
	song.h \
	song_list.h \
	status.h \
	statusbar.h \
	tags.h \
	title.h
